[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-plx"
version = "0.1.0"
dependencies = [
  "loguru",
  "python-dotenv",
  "git+https://github.com/saltchicken/ollama_query",
]

[project.scripts]
llm-plx = "llm-plx.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
